# Trajectory-Visualization

./: README.md
trajectory_pkg/: CMakeLists.txt  package.xml
trajectory_pkg/include/trajectory_pkg/: trajectory_reader.h  trajectory_saver.h
trajectory_pkg/launch/: trajectory_reader.launch  trajectory_saver.launch
trajectory_pkg/src/: trajectory_reader_node.cpp  trajectory_saver_node.cpp
trajectory_pkg/srv/: SaveTrajectory.srv
